[package]
name = "solana-movie-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.0"
solana-program = "1.18.12"
thiserror = "1.0.59"

[lib]
crate-type = ["cdylib", "lib"]
